workshop04/m-config.yaml
---

apiVersion: v1
kind: Namespace
metadata:
  name: m-ns
  labels:
    app: m
    name: m-ns
