workshop04/m-sts.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: m-hsvc
  namespace: m-ns
  labels: 
    app: m
    name: m-hsvc
spec:
  type: ClusterIP
  clusterIP: None
  selector:
    app: m
    name: m-po
  ports:
  - port: 9090
    name: console
    targetPort: 9090
  - port: 9000
    name: api
    targetPort: 9000

---
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: m-sts
  namespace: m-ns
spec:
  selector:
    matchLabels:
      app: m
      name: m-po
  serviceName: m-hsvc
  replicas: 4
  template:
    metadata:
      labels:
        app: m
        name: m-po
    spec:
      securityContext:
        fsGroup: 1001
      containers:
      - name: m-container
        image: bitnami/minio:latest
        imagePullPolicy: IfNotPresent
        ports:
        - containerPort: 9000
          name: api
        - containerPort: 9090
          name: console
        volumeMounts:
        - name: data-vol
          mountPath: /data
        resources:
          requests:
            cpu: "200m"
            memory: "250Mi"
          limits:
            cpu: "200m"
            memory: "250Mi"
  volumeClaimTemplates:
  - metadata:
      name: data-vol
    spec:
      accessModes: [ "ReadWriteOnce" ]
      resources:
        requests:
          storage: 1Gi
      storageClassName: do-block-storage
